<resources>
    <string name="app_name">Easy Language</string>
    <string name="txt_easy_language">Easy Language</string>
    <string name="txt_easy">Easy</string>
    <string name="txt_language">Language</string>
    <string name="txt_start">START</string>
    <string name="txt_input_information">Nhập thông tin</string>
    <string name="txt_name">Họ Tên: </string>
    <string name="txt_your_name">Your name</string>
    <string name="txt_age">Tuổi: </string>
    <string name="txt_your_age">Your age</string>
    <string name="txt_learn_english">Learn English</string>
    <string name="txt_notebook_have">Sổ tay đang có 0 từ</string>
    <string name="txt_count_word1">50 từ</string>
    <string name="txt_1">1</string>
    <string name="txt_2">2</string>
    <string name="txt_3">3</string>
    <string name="txt_4">4</string>
    <string name="txt_level">Cấp độ</string>
    <string name="txt_review_now">ÔN TẬP NGAY</string>
    <string name="txt_school">School</string>
    <string name="txt_school_trans">Trường học</string>
    <string name="txt_input_text">Nhập từ bạn muốn tìm kiếm</string>
    <string name="txt_student">Student</string>
    <string name="txt_search">Tra Từ</string>
    <string name="txt_name2">Thức</string>
    <string name="txt_information">Thông tin cá nhân</string>
    <string name="txt_age2">18 tuổi</string>
    <string name="txt_text_funny">Ở tuổi 20, bạn đang có số tuổi bằng với độ tuổi của cầu thủ bóng đá Jude Bellingham, anh ấy là một người Anh nên tất nhiên anh ấy nói tiếng ANh như gió, hãy cố gắng để như anh ấy nhé ^^</string>
    <string name="txt_dark_background">Màu nền tối:</string>
    <string name="txt_play_music">Bật nhạc nền:</string>
    <string name="txt_his_younger_sister_is_a_student_at_that_university">His younger sister is a student at that university</string>
    <string name="txt_spelling">/ˈstuːdnt/</string>
    <string name="txt_translate">Học sinh, sinh viên</string>
    <string name="txt_type">(n)</string>
    <string name="txt_continue">TIẾP TỤC</string>
    <string name="txt_listen_and_write">Nghe và viết lại</string>
    <string name="txt_hint">gõ từ bạn vừa nghe được</string>
    <string name="txt_fill_the_word">Điền từ</string>
    <string name="txt_xxx">----</string>
    <string name="txt_ok">OK</string>
    <string name="txt_check">kiểm tra</string>
    <string name="txt_complete">Chúc mừng bạn đã thêm 10 từ mới vào sổ tay từ vựng</string>
    <string name="txt_do_you_want_close">Bạn muốn thoát?</string>
    <string name="txt_yes">Có</string>
    <string name="txt_no">Không</string>
    <string name="text_new_word">từ cần ôn</string>
    <string name="txt_old_word">từ đã ôn</string>
    <string name="txt_selected_translate">Chọn nghĩa của từ Tiếng Anh</string>
    <string name="txt_ans2">Con gà</string>
    <string name="txt_ans3">Quả trứng</string>
    <string name="txt_ans4">Siêu nhân</string>
    <string name="txt_translate_vietnamese">Dịch từ tiếng Việt sau</string>
    <string name="txt_teacher">Teacher</string>
    <string name="txt_doctor">Doctor</string>
    <string name="txt_ks">Khảo sát</string>
    <string name="txt_ks2">Bạn thấy người làm app có đẹp trai không?</string>
</resources>