<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white2"
    android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/txt_input_information"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="start"
                android:text="@string/txt_name"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:autofillHints="username"
                android:fontFamily="@font/quicksand_light"
                android:gravity="start"
                android:hint="@string/txt_your_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:ignore="VisualLintTextFieldSize,VisualLintBounds" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="start"
                android:text="@string/txt_age"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/edtAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_weight="1"
                android:autofillHints="phone"
                android:fontFamily="@font/quicksand_light"
                android:gravity="start"
                android:hint="@string/txt_your_age"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="30sp"
                tools:ignore="VisualLintTextFieldSize,VisualLintBounds" />

        </TableRow>

    <TextView
        android:id="@+id/tvLearnEnglish"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_button_green2"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:clickable="true"
        android:layout_marginTop="50dp"
        android:enabled="true"
        android:text="@string/txt_learn_english"
        android:textColor="@color/white"
        android:paddingBottom="10dp"
        android:textSize="30sp"
        tools:ignore="KeyboardInaccessibleWidget" />

        <ImageView
            android:id="@+id/ivDict"
            android:layout_marginTop="80dp"
            android:layout_width="200dp"
            android:src="@drawable/ic_dict"
            android:layout_height="200dp"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="match_parent"
            android:background="@color/white2"
            android:layout_height="match_parent"/>





</LinearLayout>