<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_gravity="center_horizontal"
    android:id="@+id/lnLearn1_2"
    android:layout_marginTop="10dp"
    android:background="@drawable/bg_white_shadow"
    android:orientation="vertical"
    tools:ignore="TextSizeCheck">

    <TextView
        android:id="@+id/tvWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/txt_student"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvSpelling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/txt_spelling"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TableRow android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/txt_translate"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/txt_type"
            android:layout_marginStart="5dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </TableRow>


    <ImageView
        android:id="@+id/ivTouch"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_funny"
        tools:ignore="ContentDescription,ImageContrastCheck" />

</LinearLayout>