<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnFragmentLearn1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white2"
    android:orientation="vertical"
    android:padding="20dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/txt_listen_and_write"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/ivSound"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="50dp"
            android:src="@drawable/bg_sound"
            tools:ignore="ContentDescription,ImageContrastCheck" />
    </TableRow>

    <EditText
        android:id="@+id/edtInputWord"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:autofillHints="name"
        android:gravity="center_vertical"
        android:background="@drawable/bg_white_shadow"
        android:fontFamily="@font/quicksand_bold"
        android:hint="@string/txt_hint"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/btCheck"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_gravity="end"
        android:background="@drawable/bg_button_topic"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/txt_check"
        android:textColor="@color/white"
        android:textSize="25sp" />


    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="230dp"
        android:background="@drawable/bg_button_green"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:text="@string/txt_continue"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="visible" />

</LinearLayout>