<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackAlpha"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginVertical="600dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_white_shadow"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/txt_ks"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:paddingVertical="10dp"
            android:text="@string/txt_ks2"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingHorizontal="20dp">

            <Button
                android:id="@+id/btYes"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorRed"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/txt_yes"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/btNo"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorGreen"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/txt_no"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />
        </TableRow>
    </LinearLayout>

</FrameLayout>